--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@metamask/onboarding",
-  "version": "1.0.1",
-  "description": "Assists with onboarding new MetaMask users",
-  "main": "dist/metamask-onboarding.cjs.js",
-  "module": "dist/metamask-onboarding.es.js",
+  "name": "@lightstreams/onboarding",
+  "version": "0.0.1",
+  "description": "Assists with installing the lighstreams wallet",
+  "main": "dist/lightstreams-onboarding.cjs.js",
+  "module": "dist/lightstreams-onboarding.es.js",
   "types": "dist/index.d.ts",
-  "homepage": "https://github.com/MetaMask/metamask-onboarding#readme",
+  "homepage": "https://github.com/lightstreams/lightstreams-onboarding#readme",
   "bugs": {
-    "url": "https://github.com/MetaMask/metamask-onboarding/issues"
+    "url": "https://github.com/lightstreams/lightstreams-onboarding/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/MetaMask/metamask-onboarding.git"
+    "url": "https://github.com/lightstreams/lightstreams-onboarding.git"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
